flux/apps/workload-istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workload-istio
  labels:
    istio-injection: enabled
