flux/apps/workload-istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: workload-istio
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: workload-istio
spec:
  hosts:
  - "*"
  gateways:
  - workload-istio
  http:
  - route:
    - destination:
        host: workload-istio-podinfo
        port:
          number: 9898
      weight: 90
    - destination:
        host: workload-istio-canary-podinfo
        port:
          number: 9898
      weight: 10
